--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "ts-build": "tsc -p tsconfig.json",
     "coverage": "node --experimental-vm-modules --experimental-wasm-modules --experimental-wasm-threads node_modules/.bin/jest --coverage",
     "format": "prettier --write --ignore-unknown **/*",
     "prepare": "husky install",
